# TED-and-Doffin-to-ocds

./: .gitignore  19x_bt_09.xml  Common operations.txt  OCDS mapper.txt  README.md  SECURITY.md  bt_198-106.xml  constants.py  dates copy.xml  dates.xml  jsonformater.py  main.py  notices.db  output.json  pyproject.toml  stuff.txt  test_bt195_bt196_bt105.xml
converters/: BT_01.py  BT_01_Procedure.py  BT_03.py  BT_04.py  BT_04_Procedure.py  BT_05.py  BT_05_notice.py  BT_06.py  BT_06_Lot.py  BT_09.py  BT_09_Procedure.py  BT_10.py  BT_105.py  BT_105_Procedure.py  BT_106.py  BT_106_Procedure.py  BT_109.py  BT_109_Lot.py  BT_11.py  BT_111.py  BT_111_Lot.py  BT_113.py  BT_113_Lot.py  BT_115.py  BT_115_GPA_Coverage.py  BT_119.py  BT_119_LotResult.py  BT_11_Procedure_Buyer.py  BT_120.py  BT_120_Lot.py  BT_122.py  BT_122_Lot.py  BT_123.py  BT_123_Lot.py  BT_124.py  BT_124_Tool_Atypical_URL.py  BT_125.py  BT_1252.py  BT_1252_Procedure.py  BT_125_Lot.py  (+671 more)
input_files/: invalid_xml.xml  no_lots_xml.xml  test_notice.xml  valid_xml.xml
outputjsonfiles/: 2022-319091_release_0.json  2022-366668_release_0.json  2022-945636_release_0.json  2022-947105_release_0.json  2023-100679_release_0.json  2023-100860_release_0.json  2023-100863_release_0.json  2023-100958_release_0.json  2023-100966_release_0.json  2023-307227_release_0.json  2023-307227_release_1.json  2023-307227_release_2.json  2023-307227_release_3.json  2023-307227_release_4.json  2023-307227_release_5.json  2023-307227_release_6.json  2023-307227_release_7.json  2023-307227_release_8.json  2023-307227_release_9.json  2023-610912_release_0.json  2023-612007_release_0.json  2023-618728_release_0.json  2023-653367_release_0.json  2023-661116_release_0.json  2023-673152_release_0.json  2023-674907_release_0.json  2023-684186_release_0.json  2023-689565_release_0.json  2023-698390_release_0.json  2024-100506_release_0.json  2024-101190_release_0.json  2024-102293_release_0.json  2024-104394_release_0.json  2024-104667_release_0.json  2024-110489_release_0.json  2024-113575_release_0.json  ContractAwardNotice_can-desg_2023-684186_release_0.json  ContractAwardNotice_can-desg_2024-110033_release_0.json  ContractAwardNotice_can-modif_2022-627512_release_0.json  ContractAwardNotice_can-modif_2023-101032_release_0.json  (+84 more)
reports/: detailed_statistics_20241222_215609.txt  detailed_statistics_20241222_233138.txt  detailed_statistics_20241223_111932.txt  detailed_statistics_20250104_170447.txt  error_categories_20241222_215609.txt  error_categories_20241222_233138.txt  error_categories_20241223_111932.txt  error_categories_20250104_170447.txt  file_errors_20241222_233138.txt
tests/: _test_BT_195_BT_09_Procedure.py  _test_BT_195_BT_106_Procedure.py  _test_BT_195_BT_539_LotsGroup.py  _test_BT_195_BT_540_Lot.py  _test_BT_195_BT_540_LotsGroup.py  _test_BT_195_BT_5422_Lot.py  _test_BT_198_BT_105_Procedure.py  _test_BT_198_BT_106_Procedure.py  _test_date_utils.py  conftest.py  rename_test_files.py  test_BT_01_Procedure.py  test_BT_03.py  test_BT_04.py  test_BT_04_Procedure.py  test_BT_05.py  test_BT_05_notice.py  test_BT_06_Lot.py  test_BT_09.py  test_BT_09_Procedure.py  test_BT_105_Procedure.py  test_BT_106_Procedure.py  test_BT_109_Lot.py  test_BT_111_Lot.py  test_BT_113_Lot.py  test_BT_115_GPA_Coverage.py  test_BT_119_LotResult.py  test_BT_11_Procedure_Buyer.py  test_BT_120_Lot.py  test_BT_122_Lot.py  test_BT_123_Lot.py  test_BT_124_Tool_Atypical_URL.py  test_BT_1252_Procedure.py  test_BT_125_Lot.py  test_BT_125_Part.py  test_BT_127_notice.py  test_BT_130_Lot.py  test_BT_1311_Lot.py  test_BT_131_Lot.py  test_BT_132_Lot.py  (+1202 more)
utils/: date_conversion.py  date_utils.py
xmlfile/: 2022-947105.xml  2023-100679.xml  2023-100966.xml  2023-307227.xml  2023-674907.xml  2024-104394.xml  2024-104667.xml  2024-110489.xml  2024-113575.xml  ContractAwardNotice_can-desg_2024-110033.xml  ContractAwardNotice_can-modif_2022-627512.xml  ContractAwardNotice_can-modif_2023-101032.xml  ContractAwardNotice_can-modif_2023-611830.xml  ContractAwardNotice_can-modif_2023-618829.xml  ContractAwardNotice_can-modif_2023-627259.xml  ContractAwardNotice_can-modif_2023-677604.xml  ContractAwardNotice_can-social_2022-927623.xml  ContractAwardNotice_can-social_2022-943732.xml  ContractAwardNotice_can-social_2022-945801.xml  ContractAwardNotice_can-social_2023-653024.xml  ContractAwardNotice_can-social_2024-103933.xml  ContractAwardNotice_can-social_2024-111341.xml  ContractAwardNotice_can-standard_2022-347651.xml  ContractAwardNotice_veat_2022-365499.xml  (+66 more)
(+1812 files in other folders)
