[tool.poetry]
name = "ted-and-doffin-to-ocds"
version = "0.1.0"
description = "Converts XML eForm data from TED and Doffin to OCDS JSON format"
authors = ["Bjørn Jørgensen <bjornjorgensen@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
select = ["E", "F", "I", "N"]
ignore = []
