[tool.poetry]
name = "ted-and-doffin-to-ocds"
version = "0.1.0"
description = "Converts XML eForm data from TED and Doffin to OCDS JSON format"
authors = ["Bjørn Jørgensen <bjornjorgensen@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "ted_and_doffin_to_ocds", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
# Ruff configuration
target-version = "py312"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle (excluding E501 for line length)
    "E",
    # isort (excluding I001 for import sorting)
    "I",
    # pep8-naming (excluding N999 for module naming)
    "N",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-pytest-style
    "PT",
    # flake8-return
    "RET",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
]
ignore = [
    "E501",  # Line too long
    "I001",  # Import block is un-sorted or un-formatted
    "N999",  # Invalid module name
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint.isort]
known-first-party = ["ted_and_doffin_to_ocds"]

[tool.ruff.lint.mccabe]
max-complexity = 10