[tool.poetry]
name = "ted-and-doffin-to-ocds"
version = "0.1.0"
description = "Converts XML eForm data from TED and Doffin to OCDS JSON format"
authors = ["Bjørn Jørgensen <bjornjorgensen@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "ted_and_doffin_to_ocds", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5"
tqdm = "4.67.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
ruff = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
# Ruff configuration
target-version = "py313"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle (excluding E501 for line length)
    "E",
    # isort (excluding I001 for import sorting)
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-pytest-style
    "PT",
    # flake8-return
    "RET",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
    "S",    # flake8-bandit (security checks)
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "T20",  # flake8-print
    "ARG",  # flake8-unused-arguments
    #"ANN",
    "A004",
    "PYI064",
    "RUF030",
    "UP043",
    "UP031",
    "RUF007",
    "RUF200",
    "B039",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "TID",
    "TC",
    "INT",
    "ARG",
    "PTH",
    "TD",
    "FIX",
    #"ERA",
    "PD",
    "PGH",
    "PL",
    "R",
    "W",
    "TRY",
    "FLY",
    #"FAST",
    "PERF",
    "FURB",
    #"DOC",
    "RUF",
]
ignore = [
    "E501",  # Line too long
    "I001",  # Import block is un-sorted or un-formatted
    "S101",  # Use of assert detected
    "S320",  # Using `xml.etree.ElementTree.parse` to parse untrusted XML data is known to be vulnerable to XML attacks
    "COM812",  # Trailing comma missing
    "ISC001",
    "DTZ007",
    "PLR2004",
    "PLR0915",
    "PLE1205",
    "RUF001",
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint.isort]
known-first-party = ["ted_and_doffin_to_ocds"]

[tool.ruff.lint.mccabe]
max-complexity = 10